--- a/5_Akka/src/main/java/server/server.conf
+++ b/5_Akka/src/main/java/server/server.conf
@@ -1,7 +1,11 @@
 akka {
+  loglevel = "INFO"
   actor {
     warn-about-java-serializer-usage = false
-    provider = "akka.remote.RemoteActorRefProvider"
+    provider = remote
+    serializers {
+          java = "akka.serialization.JavaSerializer"
+        }
   }
   remote {
     enabled-transports = ["akka.remote.netty.tcp"]
@@ -9,5 +13,7 @@ akka {
       hostname = "127.0.0.1"
       port = 2552
     }
+    log-sent-messages = on
+    log-received-messages = on
   }
 }
